--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
-name: ci
+name: Release
 on:
-  pull_request:
   push:
     branches:
-      - develop
+      - main
+
+permissions:
+  contents: read
 
 jobs:
   lint:
@@ -79,3 +81,20 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [test]
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
+    steps:
+      - name: Configure npm
+        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+
+      - name: Release
+        run: npm run release
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
