--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -23,29 +24,10 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-  build:
-    name: Build
+  audit-ci:
+    name: audit-ci
     runs-on: ubuntu-latest
     needs: [lint]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run build
-        run: npm run build
-
-  audit-ci:
-    name: Audit CI
-    runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -61,10 +43,28 @@ jobs:
       - name: Run Audit-CI to check for vulnerabilities
         run: npm run audit-ci
 
-  test:
-    name: Test
+  build:
+    name: build
     runs-on: ubuntu-latest
     needs: [audit-ci]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Run build
+        run: npm run build
+  tests:
+    name: tests
+    runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
