--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -25,29 +26,10 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-  build:
-    name: Build
+  audit-ci:
+    name: audit-ci
     runs-on: ubuntu-latest
     needs: [lint]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run build
-        run: npm run build
-
-  audit-ci:
-    name: Audit CI
-    runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -63,8 +45,8 @@ jobs:
       - name: Run Audit-CI to check for vulnerabilities
         run: npm run audit-ci
 
-  test:
-    name: Test
+  tests:
+    name: tests
     runs-on: ubuntu-latest
     needs: [audit-ci]
     steps:
@@ -83,8 +65,9 @@ jobs:
         run: npm run test
 
   release:
+    name: release
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [tests]
     permissions:
       contents: write
       issues: write
@@ -94,7 +77,7 @@ jobs:
       - name: Configure npm
         run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
 
-      - name: Release
+      - name: Build and Release
         run: npm run release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
