--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eth-crypto-js",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Cryptographic javascript-functions for ethereum and tutorials on how to use them together with web3js and solidity",
   "author": "Olivier Esuka <oesukan@gmail.com> (https://oesukam.me)",
   "license": "MIT",
@@ -12,8 +12,8 @@
     "type": "git",
     "url": "git+https://github.com/eth-crypto-js/cheke.git"
   },
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "engines": {
     "node": ">=18"
   },
@@ -44,7 +44,7 @@
     "build": "tsc",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "audit-ci": "audit-ci --config audit-ci.jsonc",
-    "release": "npm publish --access-public"
+    "release": "npm run build & npm publish --access-public"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
