--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,94 +1,26 @@
-name: release
+name: releases
 on:
   push:
-    # branches:
-    #   - main
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
-  lint:
-    name: lint
+  changelog:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - name: Conventional Changelog Action
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v3.7.1
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run linter
-        run: npm run lint
-
-  audit-ci:
-    name: audit-ci
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run Audit-CI to check for vulnerabilities
-        run: npm run audit-ci
-
-  tests:
-    name: tests
-    runs-on: ubuntu-latest
-    needs: [audit-ci]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run tests
-        run: npm run test
-
-  coverage:
-    needs: [tests]
-    name: coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: paambaati/codeclimate-action@v7.0.0
+          github-token: ${{ secrets.GH_PA_TOKEN }}
+          version-file: './package.json,./package-lock.json'
+      - name: create release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PA_TOKEN }}
         with:
-          coverageCommand: npm run coverage
-
-  release:
-    name: release
-    runs-on: ubuntu-latest
-    needs: [tests]
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
-    steps:
-      - name: Configure npm
-        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-
-      - name: Build and Release
-        run: npm run release
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
