--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
-name: CI
+name: ci
 on:
-  pull_request:
   push:
     branches:
+      - main
       - develop
+  pull_request:
 
 jobs:
   lint:
@@ -94,10 +95,9 @@ jobs:
 
       - run: npm install -g yarn
       - run: yarn install
-      - run: yarn build
+      - run: yarn test
       - uses: paambaati/codeclimate-action@main
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPO_TOKEN }}
         with:
-          coverageCommand: yarn coverage
           debug: true
