--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eth-crypto-js",
-  "version": "0.1.15",
+  "version": "0.2.15",
   "description": "Cryptographic javascript-functions for ethereum and tutorials on how to use them together with web3js and solidity",
   "author": "Olivier Esuka <oesukan@gmail.com> (https://oesukam.me)",
   "license": "MIT",
@@ -46,6 +46,8 @@
     "signature"
   ],
   "scripts": {
+    "prebuild": "rimraf dist",
+    "rollup:build": "rollup --config --sourcemap --validate --bundleConfigAsCjs",
     "rimraf": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -63,6 +65,11 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.5.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -80,6 +87,10 @@
     "jest": "^29.7.0",
     "microbundle": "^0.15.1",
     "prettier": "^3.3.2",
+    "rollup": "^4.18.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "size-limit": "^8.2.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
