--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*spec.ts", "**/*test.ts", "/test", "/tests", "test", "**/*__mocks__/*"],
   "compilerOptions": {
-    "module": "esnext",
+    "module": "ESNext",
+    "target": "ESNext",
     "lib": ["dom", "esnext"],
     "declaration": true,
     "emitDecoratorMetadata": true,
@@ -14,8 +17,6 @@
     "esModuleInterop": true,
     "allowJs": true,
     "moduleResolution": "node",
-  },
-  "include": [
-    "src/**/*"
-  ],
+    "importHelpers": true
+  }
 }
