--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,7 +112,7 @@ jobs:
         with:
           debug: true
 
-  update_release_draft:
+  update-release-draft:
     runs-on: ubuntu-latest
     needs: [tests]
     permissions:
