--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,10 +128,11 @@ jobs:
           pre-release: ${{ github.ref != 'refs/heads/main' }}
           version-file: './package.json,./package-lock.json'
           release-count: 0
+          skip-on-empty: 'false'
 
       - name: Create Release
         uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false'  && github.ref == 'refs/heads/main' }}
+        if: ${{ steps.changelog.outputs.skipped == 'false' && github.ref == 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
