--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -118,6 +118,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [tests]
     if: ${{ github.event_name == 'push' }} # Publish coverage only for push commits, not PRs.
+    permissions:
+      contents: read
+      pages: write
     steps:
       - uses: actions/checkout@v4
       - name: Conventional Changelog Action
