--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -127,7 +127,7 @@ jobs:
         id: changelog
         uses: TriPSs/conventional-changelog-action@v5.1.0
         with:
-          github-token: ${{ secrets.GH_PA_TOKEN }}
+          github-token: ${{ secrets.github_token }}
           pre-release: ${{ github.ref != 'refs/heads/main' }}
           version-file: './package.json,./package-lock.json'
           release-count: 0
@@ -137,7 +137,7 @@ jobs:
         uses: actions/create-release@v1
         if: ${{ steps.changelog.outputs.skipped == 'false' && github.ref == 'refs/heads/main' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PA_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
