--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,31 +114,44 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPO_TOKEN }}
         with:
           debug: true
-  release:
+
+  release_draft:
+    name: release_drafter
     runs-on: ubuntu-latest
     needs: [tests]
-    if: ${{ github.event_name == 'push' }} # Publish coverage only for push commits, not PRs.
-    permissions:
-      contents: read
-      pages: write
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Conventional Changelog Action
-        id: changelog
-        uses: TriPSs/conventional-changelog-action@v5.1.0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          github-token: ${{ secrets.github_token }}
-          pre-release: ${{ github.ref != 'refs/heads/main' }}
-          version-file: './package.json,./package-lock.json'
-          release-count: 0
-          skip-on-empty: 'false'
+          node-version-file: '.nvmrc'
+
+      - name: Release Drafter
+        uses: release-drafter/release-drafter@v5
+        with:
+          config-name: release-drafter-config.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PA_TOKEN }}
+
+  create_release:
+    needs: [release_draft]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' # Ensure this only runs on main branch
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' && github.ref == 'refs/heads/main' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.GH_PA_TOKEN }}
         with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
