security: update audit-ci allow list

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -3,8 +3,5 @@
   "moderate": true,
   "low": true,
   "report-type": "summary",
-  "allowlist": [
-    "GHSA-72xf-g2v4-qvf3",
-    "GHSA-p8p7-x288-28g6"
-  ]
+  "allowlist": []
 }
