chore: enable auto merge manual trigger

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,6 +1,7 @@
 name: Auto-Merge and Sync Branches
 
 on:
+  workflow_dispatch: # Enable manual trigger
   push:
     branches:
       - main # Change this to your primary branch name if different
