fix: Reduces CI/CD pipeline jobs and enforces npm instead of yarn

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,14 +21,14 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install Dependencies
-        run: yarn install
+        run: npm ci
 
       - name: Validate branch name
         run: bash .husky/scripts/validate-branch-names.sh
         env:
           BRANCH_NAME: ${{ github.head_ref }}
 
-  lint:
+  lint-build-audit:
     name: lint
     runs-on: ubuntu-latest
     needs: [validate_branch_commit]
@@ -42,52 +42,21 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install Dependencies
-        run: yarn install
+        run: npm ci
 
       - name: Run linter
         run: npm run lint
 
-  audit_ci:
-    name: audit_ci
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install Dependencies
-        run: yarn install
+      - name: Run build
+        run: npm run build
 
       - name: Run Audit-CI to check for vulnerabilities
         run: npm run audit-ci
 
-  build:
-    name: build
-    runs-on: ubuntu-latest
-    needs: [audit_ci]
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - name: Run build
-        run: npm run build
   tests:
     name: tests
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [lint-build-audit]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -98,7 +67,7 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run tests
         run: npm run test
