adds packages to allow list

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -3,5 +3,5 @@
   "moderate": true,
   "low": true,
   "report-type": "summary",
-  "allowlist": []
+  "allowlist": ["GHSA-952p-6rrq-rcjv", "GHSA-gcx4-mw62-g8wm"]
 }
